Android OOP-D: DisplayScheduler should only report draw-inducing damage

Currently DisplayScheduler reports damage to SurfaceManager in any case
where a damaged surface ID damages the display. While these cases will
trigger a draw when visible, they don't necessarily trigger a draw
in any defined timeframe. This can lead to issues. Consider:

1) Display 1 is not visible, embeds surface A.
2) Surface A sends CF 1, we don't immediately ack as we will wait for
   Display 1 to draw.
3) Display 2 becomes visible, embeds surface A with a new surface ID.
4) Display 2 will never update, as no new frames will be produced for
   surface A as the renderer is continually waiting on the ack for
   CF 1.

By having DisplayScheduler report no damage if invisible, we always
ack frames in a timely manner. This may allow a renderer to produce
some extra frames when its display is invisible, but this should be
limited as the renderer itself receives visibility notifications and
won't get additional BeginFrames once visibility is fully processed.

Bug: 875895
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel
Change-Id: I272de950d8e4d4c819c445dc8162ac360afb80a1
Reviewed-on: https://chromium-review.googlesource.com/1182862
Reviewed-by: Fady Samuel <fsamuel@chromium.org>
Commit-Queue: Eric Karl <ericrk@chromium.org>
Cr-Commit-Position: refs/heads/master@{#584917}
Former-commit-id: 60d359fd3bd0bbe1089cf24c196187b3c03fcd65